# detray_tutorial

./: CMakeLists.txt  README.md
tutorials/: CMakeLists.txt
tutorials/host/detector/: detector.cpp  volume_graph.cpp
tutorials/host/propagation/: actors.cpp  full_chain.cpp  navigation.cpp
tutorials/propagation/: propagation.cpp  propagation.cu  propagation.hpp  propagation_cpu.cpp  propagation_cuda.cpp  propagation_cuda.cu  propagation_cuda.hpp
